re-create-this folder added and some other examples

--- a/re-create-this/index.html
+++ b/re-create-this/index.html
@@ -21,11 +21,27 @@
       </ul>
     </nav>
   </header>
+  <main></main>
+  <template>
+    <article>
+      <h3></h3>
+      <h2></h2>
+      <div class="line"></div>
+      <div class="box">
+        <p>Price - $<span class="price">N/A</span></p>
+        <p>Colours - <span class="color">N/A</span></p>
+        <p>In Stock - <span class="instock">No</span></p>
+      </div>
+      <img src="imgs/warhawk.png">
+      <button>FULL SPECS</button>
+    </article>
+  </template>
 
+  <!--
   <main class="">
     <article class="">
       <h3>STATE</h3>
-      <h1>warhawk</h1>
+      <h2>warhawk</h2>
       <div class="line"></div>
       <div class="box ">
         <p>Price: $579</p>
@@ -35,17 +51,13 @@
       <img src="imgs/warhawk.png">
       <button>FULL SPECS</button>
     </article>
-
-
     <article class="">
       <h3>STATE</h3>
-      <h1>CARDINAL</h1>
+      <h2>CARDINAL</h2>
       <div class="line"></div>
       <div class="box ">
         <p>Price: $449</p>
-        <hr>
         <p>Color: N/A</p>
-        <hr>
         <p>In Stock: 2</p>
       </div>
       <img src="imgs/cardinal.png">
@@ -54,54 +66,43 @@
 
     <article class="">
       <h3>Linus</h3>
-      <h1>dutchi 3 or 8</h1>
+      <h2>dutchi 3 or 8</h2>
       <div class="line"></div>
       <div class="box ">
         <p>Price: $669-$849</p>
-        <hr>
         <p>Color: Black/Red</p>
-        <hr>
         <p>In Stock: No</p>
       </div>
       <img src="imgs/Dutchi3or8.png">
       <button>FULL SPECS</button>
     </article>
-
     <article class="">
       <h3>Linus</h3>
-      <h1>Mixte 3 or 8</h1>
+      <h2>Mixte 3 or 8</h2>
       <div class="line"></div>
       <div class="box ">
         <p>Price: §649-$849</p>
-        <hr>
         <p>Color: White/Blue</p>
-        <hr>
         <p>In Stock: Yes</p>
       </div>
       <img src="imgs/mixte3or8.png">
       <button>FULL SPECS</button>
     </article>
-
-
-
     <article class="">
       <h3>Linus</h3>
-      <h1>dutchi 1</h1>
+      <h2>dutchi 1</h2>
       <div class="line"></div>
       <div class="box ">
         <p>Price: $469-$849</p>
-        <hr>
         <p>Color: black/White/Red</p>
-        <hr>
         <p>In Stock: Yes</p>
       </div>
       <img src="imgs/Dutchi1.png">
       <button>FULL SPECS</button>
     </article>
-
     <article class="">
       <h3>Linus</h3>
-      <h1>Dover 1 0r 5</h1>
+      <h2>Dover 1 0r 5</h2>
       <div class="line"></div>
       <div class="box ">
         <p>Price: $599-$789</p>
@@ -112,8 +113,7 @@
       <button>FULL SPECS</button>
     </article>
   </main>
-
-
+-->
   <script src="script.js"></script>
 </body>
 
