--- a/re-create-this/index.html
+++ b/re-create-this/index.html
@@ -14,10 +14,21 @@
     <img src="imgs/Logo.png">
     <nav>
       <ul>Brands We Carry -
-        <li>LINUS /</li>
-        <li>BROMPTON /</li>
-        <li>CHRIATIANIA /</li>
-        <li>STATE</li>
+        <a href="">
+          <li>LINUS</li>
+        </a>
+        /
+        <a href="">
+          <li>BROMPTON</li>
+        </a>
+        /
+        <a href="">
+          <li>CHRIATIANIA</li>
+        </a>
+        /
+        <a href="">
+          <li>STATE</li>
+        </a>
       </ul>
     </nav>
   </header>
